<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_mal_export_0" android:padding="@dimen/dp_24" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/sp_14" android:textColor="@color/textColorChangeLog" android:id="@id/textMsgMal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/msg_mal_export" android:includeFontPadding="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/sp_18" android:textStyle="bold" android:textColor="@color/white" android:id="@id/labelExportFormat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_24" android:text="@string/label_export_format" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textMsgMal" />
    <RadioGroup android:orientation="horizontal" android:id="@id/radioGroup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_12" android:checkedButton="@id/buttonImportText" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/labelExportFormat">
        <RadioButton android:textSize="@dimen/sp_14" android:textColor="@color/white" android:id="@id/buttonImportText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_format_text" app:buttonTint="@color/colorRed" />
        <RadioButton android:textSize="@dimen/sp_14" android:textColor="@color/white" android:id="@id/buttonImportXML" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_format_xml" android:layout_marginStart="@dimen/dp_24" app:buttonTint="@color/colorRed" />
        <RadioButton android:textSize="@dimen/sp_14" android:textColor="@color/white" android:id="@id/buttonImportJSON" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_format_json" android:layout_marginStart="@dimen/dp_24" app:buttonTint="@color/colorRed" />
    </RadioGroup>
    <TextView android:textSize="@dimen/sp_18" android:textStyle="bold" android:textColor="@color/white" android:id="@id/labelSavedTo" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_24" android:text="@string/label_saved_to" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/radioGroup" />
    <TextView android:textSize="@dimen/sp_14" android:textStyle="bold" android:textColor="@color/textColorChangeLog" android:id="@id/textPath" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_24" android:fontFamily="monospace" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/labelSavedTo" />
    <com.google.android.material.button.MaterialButton android:id="@id/buttonExport" android:layout_width="0.0dip" android:layout_marginBottom="@dimen/dp_24" android:text="@string/label_export" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/RedButton" />
</androidx.constraintlayout.widget.ConstraintLayout>