<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:tag="layout/fragment_mal_import_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/dp_103" android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout android:padding="@dimen/dp_24" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/sp_14" android:textColor="@color/textColorChangeLog" android:id="@id/textMsgMal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/msg_mal_import" android:includeFontPadding="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="@dimen/sp_14" android:textColor="@color/textColorChangeLog" android:id="@id/textWaitImport" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_24" android:text="@string/msg_wait_import" android:includeFontPadding="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textMsgMal" />
            <TextView android:textSize="@dimen/sp_14" android:textStyle="bold" android:textColor="@color/textColorChangeLog" android:id="@id/textLabelMalUsername" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_24" android:text="@string/label_mal_username" android:includeFontPadding="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textWaitImport" />
            <com.google.android.material.textfield.TextInputLayout android:id="@id/layoutInputMalUsername" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_12" app:hintEnabled="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textLabelMalUsername" app:startIconDrawable="@drawable/ic_username" style="@style/TextInput">
                <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/sp_14" android:textColor="@color/white" android:textColorHint="@color/colorHint" android:id="@id/inputMalUsername" android:paddingLeft="@dimen/dp_24" android:paddingRight="@dimen/dp_24" android:layout_width="fill_parent" android:layout_height="@dimen/dp_60" android:hint="@string/label_myanimelist_username" android:maxLines="1" android:inputType="text" android:paddingHorizontal="@dimen/dp_24" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView android:textSize="@dimen/sp_18" android:textStyle="bold" android:textColor="@color/white" android:id="@id/labelErase" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_24" android:text="@string/label_erase" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/layoutInputMalUsername" />
            <com.google.android.material.switchmaterial.SwitchMaterial android:id="@id/switchErase" android:paddingTop="@dimen/dp_8" android:paddingBottom="@dimen/dp_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:thumb="@drawable/thumb_selector" android:paddingVertical="@dimen/dp_8" app:layout_constraintBottom_toBottomOf="@id/labelErase" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/labelErase" app:thumbTint="@color/white" app:track="@drawable/track_selector" app:trackTint="@color/color_track_switch_button" />
            <TextView android:textSize="@dimen/sp_14" android:textColor="@color/textColorChangeLog" android:id="@id/textMsgMalErase" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_12" android:text="@string/msg_mal_erase" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/labelErase" />
            <TextView android:textSize="@dimen/sp_18" android:textStyle="bold" android:textColor="@color/white" android:id="@id/labelMalStats" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_24" android:text="@string/label_mal_stats" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textMsgMalErase" />
            <com.google.android.material.checkbox.MaterialCheckBox android:textSize="@dimen/sp_14" android:textColor="@color/white" android:id="@id/checkWatching" android:paddingTop="@dimen/dp_16" android:paddingBottom="@dimen/dp_16" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_12" android:checked="true" android:text="@string/title_stats_watching" android:paddingVertical="@dimen/dp_16" app:buttonTint="@color/colorRed" app:layout_constraintEnd_toStartOf="@id/checkPlanToWatch" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/labelMalStats" />
            <com.google.android.material.checkbox.MaterialCheckBox android:textSize="@dimen/sp_14" android:textColor="@color/white" android:id="@id/checkCompleted" android:paddingTop="@dimen/dp_16" android:paddingBottom="@dimen/dp_16" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_12" android:checked="true" android:text="@string/title_stats_completed" android:paddingVertical="@dimen/dp_16" app:buttonTint="@color/colorRed" app:layout_constraintEnd_toEndOf="@id/checkWatching" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/checkWatching" />
            <com.google.android.material.checkbox.MaterialCheckBox android:textSize="@dimen/sp_14" android:textColor="@color/white" android:id="@id/checkOnHold" android:paddingTop="@dimen/dp_16" android:paddingBottom="@dimen/dp_16" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_12" android:checked="true" android:text="@string/title_stats_on_hold" android:paddingVertical="@dimen/dp_16" app:buttonTint="@color/colorRed" app:layout_constraintEnd_toEndOf="@id/checkWatching" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/checkCompleted" />
            <com.google.android.material.checkbox.MaterialCheckBox android:textSize="@dimen/sp_14" android:textColor="@color/white" android:id="@id/checkPlanToWatch" android:paddingTop="@dimen/dp_16" android:paddingBottom="@dimen/dp_16" android:layout_width="0.0dip" android:layout_height="wrap_content" android:checked="true" android:text="@string/title_stats_plan" android:layout_marginStart="@dimen/dp_12" android:paddingVertical="@dimen/dp_16" app:buttonTint="@color/colorRed" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/checkWatching" app:layout_constraintTop_toTopOf="@id/checkWatching" />
            <com.google.android.material.checkbox.MaterialCheckBox android:textSize="@dimen/sp_14" android:textColor="@color/white" android:id="@id/checkDropped" android:paddingTop="@dimen/dp_16" android:paddingBottom="@dimen/dp_16" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_12" android:checked="true" android:text="@string/title_stats_dropped" android:paddingVertical="@dimen/dp_16" app:buttonTint="@color/colorRed" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/checkPlanToWatch" app:layout_constraintTop_toBottomOf="@id/checkPlanToWatch" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.button.MaterialButton android:layout_gravity="bottom" android:id="@id/buttonImport" android:layout_width="fill_parent" android:layout_height="@dimen/dp_55" android:layout_marginLeft="@dimen/dp_24" android:layout_marginRight="@dimen/dp_24" android:layout_marginBottom="@dimen/dp_48" android:text="@string/label_import" android:layout_marginHorizontal="@dimen/dp_24" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/RedButton" />
</FrameLayout>