<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:tag="layout/fragment_contact_us_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.button.MaterialButton android:gravity="start|center" android:id="@id/buttonWebsite" android:padding="@dimen/dp_24" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_24" android:layout_marginTop="@dimen/dp_24" android:layout_marginRight="@dimen/dp_24" android:text="@string/title_website" android:layout_marginHorizontal="@dimen/dp_24" app:icon="@drawable/ic_website" app:iconGravity="start" app:iconSize="@dimen/dp_24" app:iconTint="@color/colorRed" style="@style/GrayButton" />
    <com.google.android.material.button.MaterialButton android:gravity="start|center" android:id="@id/buttonTwitter" android:padding="@dimen/dp_24" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_24" android:layout_marginTop="@dimen/dp_24" android:layout_marginRight="@dimen/dp_24" android:text="@string/title_twitter" android:layout_marginHorizontal="@dimen/dp_24" app:icon="@drawable/ic_twitter" app:iconGravity="start" app:iconSize="@dimen/dp_24" app:iconTint="@color/colorRed" style="@style/GrayButton" />
    <com.google.android.material.button.MaterialButton android:gravity="start|center" android:id="@id/buttonTelegram" android:padding="@dimen/dp_24" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_24" android:layout_marginTop="@dimen/dp_24" android:layout_marginRight="@dimen/dp_24" android:text="@string/title_telegram" android:layout_marginHorizontal="@dimen/dp_24" app:icon="@drawable/ic_telegram" app:iconGravity="start" app:iconSize="@dimen/dp_24" app:iconTint="@color/colorRed" style="@style/GrayButton" />
</androidx.appcompat.widget.LinearLayoutCompat>