<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:tag="layout/fragment_login_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView android:id="@id/buttonBack" android:background="@drawable/ripple_circle" android:padding="@dimen/dp_8" android:layout_width="@dimen/dp_44" android:layout_height="@dimen/dp_44" android:layout_marginTop="@dimen/dp_56" android:layout_marginStart="@dimen/dp_16" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_back" />
            <androidx.appcompat.widget.AppCompatImageView android:id="@id/imageLogo" android:layout_width="@dimen/dp_100" android:layout_height="@dimen/dp_100" android:layout_marginTop="@dimen/dp_160" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_app" />
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_32" android:textStyle="bold" android:textColor="@color/white" android:id="@id/textLetYouIn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_55" android:text="@string/title_let_you_in" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/imageLogo" />
            <com.google.android.material.button.MaterialButton android:id="@id/buttonContinueWithGoogle" android:layout_width="0.0dip" android:layout_marginLeft="@dimen/dp_24" android:layout_marginRight="@dimen/dp_24" android:layout_marginBottom="@dimen/dp_46" android:text="@string/title_continue_with_google" android:layout_marginHorizontal="@dimen/dp_24" app:icon="@drawable/ic_google" app:iconTintMode="multiply" app:layout_constraintBottom_toTopOf="@id/viewLine" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/OutLineButton" />
            <View android:id="@id/viewLine" android:background="@color/colorStrokeOutlineButton" android:layout_width="0.0dip" android:layout_height="@dimen/dp_1" android:layout_marginLeft="@dimen/dp_24" android:layout_marginRight="@dimen/dp_24" android:layout_marginBottom="@dimen/dp_46" android:layout_marginHorizontal="@dimen/dp_24" app:layout_constraintBottom_toTopOf="@id/buttonSignInWithPassword" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_18" android:textColor="@color/white" android:gravity="center" android:background="@color/colorPrimary" android:layout_width="@dimen/dp_50" android:layout_height="@dimen/dp_25" android:text="@string/title_or" app:layout_constraintBottom_toBottomOf="@id/viewLine" app:layout_constraintEnd_toEndOf="@id/viewLine" app:layout_constraintStart_toStartOf="@id/viewLine" app:layout_constraintTop_toTopOf="@id/viewLine" />
            <com.google.android.material.button.MaterialButton android:id="@id/buttonSignInWithPassword" android:layout_width="0.0dip" android:layout_marginLeft="@dimen/dp_24" android:layout_marginRight="@dimen/dp_24" android:layout_marginBottom="@dimen/dp_55" android:text="@string/title_sign_in_with_password" android:layout_marginHorizontal="@dimen/dp_24" app:layout_constraintBottom_toTopOf="@id/textNotHaveAccount" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/RedButton" />
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_14" android:textColor="@color/white" android:id="@id/textNotHaveAccount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dp_48" android:text="@string/title_do_not_have_account" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/textSignUp" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" />
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_14" android:textColor="@color/colorRed" android:id="@id/textSignUp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_sign_up" android:layout_marginStart="@dimen/dp_8" app:layout_constraintBottom_toBottomOf="@id/textNotHaveAccount" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/textNotHaveAccount" app:layout_constraintTop_toTopOf="@id/textNotHaveAccount" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <include android:id="@id/layoutLoading" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" layout="@layout/layout_loading" />
</FrameLayout>