<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_help_center_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/buttonBack" android:background="@drawable/ripple_circle" android:padding="@dimen/dp_8" android:layout_width="@dimen/dp_44" android:layout_height="@dimen/dp_44" android:layout_marginTop="@dimen/dp_56" android:layout_marginStart="@dimen/dp_16" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_back" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_24" android:textStyle="bold" android:textColor="@color/white" android:id="@id/textTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_help_center" android:layout_marginStart="@dimen/dp_8" app:layout_constraintBottom_toBottomOf="@id/buttonBack" app:layout_constraintStart_toEndOf="@id/buttonBack" app:layout_constraintTop_toTopOf="@id/buttonBack" />
    <com.google.android.material.button.MaterialButton android:gravity="start|center" android:id="@id/buttonWebsite" android:padding="@dimen/dp_24" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_24" android:layout_marginTop="@dimen/dp_40" android:layout_marginRight="@dimen/dp_24" android:text="@string/title_website" android:layout_marginHorizontal="@dimen/dp_24" app:icon="@drawable/ic_website" app:iconGravity="start" app:iconSize="@dimen/dp_24" app:iconTint="@color/colorRed" app:layout_constraintTop_toBottomOf="@id/textTitle" style="@style/GrayButton" />
    <com.google.android.material.button.MaterialButton android:gravity="start|center" android:id="@id/buttonTwitter" android:padding="@dimen/dp_24" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_24" android:layout_marginTop="@dimen/dp_24" android:layout_marginRight="@dimen/dp_24" android:text="@string/title_twitter" android:layout_marginHorizontal="@dimen/dp_24" app:icon="@drawable/ic_twitter" app:iconGravity="start" app:iconSize="@dimen/dp_24" app:iconTint="@color/colorRed" app:layout_constraintTop_toBottomOf="@id/buttonWebsite" style="@style/GrayButton" />
    <com.google.android.material.button.MaterialButton android:gravity="start|center" android:id="@id/buttonTelegram" android:padding="@dimen/dp_24" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_24" android:layout_marginTop="@dimen/dp_24" android:layout_marginRight="@dimen/dp_24" android:text="@string/title_telegram" android:layout_marginHorizontal="@dimen/dp_24" app:icon="@drawable/ic_telegram" app:iconGravity="start" app:iconSize="@dimen/dp_24" app:iconTint="@color/colorRed" app:layout_constraintTop_toBottomOf="@id/buttonTwitter" style="@style/GrayButton" />
</androidx.constraintlayout.widget.ConstraintLayout>